--- a/styles/header.css
+++ b/styles/header.css
@@ -13,11 +13,15 @@ h1, h2, h3, h4, h5, h6, p {
 
 header {
     width: calc(100% - 44px);
-    background-color: #6554c0;
+    background-color: #6554C0;
     color: white;
     padding: 11px 22px;
     display: flex;
     justify-content: space-between;
+}
+
+.logo-link {
+    height: 100%;
 }
 
 .header-nametag {
@@ -46,4 +50,10 @@ header {
     color: black;
     font-size: 0.8em;
     margin: 0 2px;
+}
+
+header a:focus {
+    outline: none;
+    border: 1px solid white;
+    border-radius: 2px;
 }
