--- a/styles/nav.css
+++ b/styles/nav.css
@@ -15,3 +15,9 @@ main {
 .side-nav a {
     margin: 29px 0 0;
 }
+
+.side-nav a:focus {
+    outline: none;
+    border: 1px solid #6554C0;
+    border-radius: 2px;
+}
