--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -6,6 +6,44 @@
     margin: 21px
 }
 
+.menu-btn {
+    display: none;
+    font-size: 1.2em;
+    cursor: pointer;
+    color: #212242;
+    margin: 0 0 21px 21px;
+    border: 1px solid #E9EDF0;
+    border-radius: 2px;
+    padding: 3px;
+    width: 16px;
+}
+
+.menu-btn p {
+    margin: 0;
+}
+
+.back-btn {
+    display: none;
+    font-size: 1.2em;
+    cursor: pointer;
+    color: #212242;
+    margin: 0 0 21px 21px;
+    border: 1px solid #E9EDF0;
+    border-radius: 2px;
+    padding: 3px;
+    width: 16px;
+}
+
+.back-btn p {
+    margin: 0;
+}
+
+.menu-btn:focus {
+    outline: none;
+    border: 1px solid #6554C0;
+    border-radius: 2px;
+}
+
 .columns {
     display: flex;
     height: 100%;
@@ -18,8 +56,10 @@
 }
 
 .left-column {
-    width: 25%;
-    border: 0.7px solid #E9EDF0;
+    width: 356px;
+    border-top: 0.7px solid #E9EDF0;
+    border-left: 0.7px solid #E9EDF0;
+    border-right: 0.7px solid #E9EDF0;
     height: 100%;
 }
 
@@ -31,8 +71,8 @@
 }
 
 .right-column {
-    width: 75%;
-    border: 0.7px solid #E9EDF0;
+    width: calc(100% - 356px);
+    border-top: 0.7px solid #E9EDF0;
     height: 100%;
 }
 
@@ -134,4 +174,18 @@
     height: 100%;
     width: 100%;
     overflow: hidden;
+}
+
+@media only screen and (max-width: 1024px) {
+    .menu-btn {
+        display: block;
+    }
+
+    .right-column {
+        width: 100%;
+    }
+
+    .left-column {
+        display: none;
+    }
 }
