--- a/styles/chats.css
+++ b/styles/chats.css
@@ -5,6 +5,7 @@
 }
 
 .chats-body {
+    display: block;
     height: 100%;
     border-right: 0.7px solid #E9EDF0;
     width: calc(100% - 277px);
@@ -13,10 +14,29 @@
     position: relative;
 }
 
+.hidden {
+    display: none;
+}
+
 .chats-body h2 {
     margin: 0 0 20px;
     font-size: 1.1em;
     color: #212242;
+}
+
+.comments-icon {
+    display: none;
+    float: right;
+    margin: 0;
+    font-size: 1.3em;
+    cursor: pointer;
+    color: #212242;
+}
+
+.comments-icon:focus {
+    outline: none;
+    border: 1px solid #212242;
+    border-radius: 2px;
 }
 
 .chat {
@@ -133,5 +153,11 @@
 }
 
 @media only screen and (max-width: 670px) {
-    
+    .chats-body {
+        width: 100%;
+    }
+
+    .comments-icon {
+        display: block;
+    }
 }
